<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateEvent">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/event_name"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_marginTop="36dp"
                android:ems="10"
                android:hint="@string/hint_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/event_description"
                android:layout_width="match_parent"
                android:layout_height="111dp"
                android:layout_marginTop="20dp"
                android:autoText="false"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/hint_description"
                android:inputType="textMultiLine" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="?android:attr/listDivider"
                android:visibility="invisible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/hint_country"
                    android:inputType="textPersonName"
                    android:text="Russia" />

                <EditText
                    android:id="@+id/city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/hint_city"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/street"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/hint_street"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/house"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/hint_house"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/building"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/hint_building"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="?android:attr/listDivider"
                android:visibility="invisible" />

            <Button
                android:id="@+id/time"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_choose_duration" />

            <Button
                android:id="@+id/date"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_choose_date" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="?android:attr/listDivider"
                android:visibility="invisible" />

<!--            <Button-->
<!--                android:id="@+id/choosePhoto"-->
<!--                style="@android:style/Widget.Button.Inset"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/choose_photo" />-->

<!--            <ImageView-->
<!--                android:id="@+id/photo"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                app:srcCompat="@mipmap/ic_launcher" />-->

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="?android:attr/listDivider"
                android:visibility="invisible" />

            <Button
                android:id="@+id/saveButton"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SaveButton" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>